--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "author": "Your name here",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "express": "^4.14.0"
   },
   "devDependencies": {
