--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Your name here",
   "dependencies": {
     "body-parser": "^1.15.2",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "express-jsonschema": "^1.1.0"
   },
   "devDependencies": {
     "mocha": "2.3.3",
