--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha"
   },
-  "author": "Your name here",
+  "author": "Yoni Davidson",
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
