--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Backend challenge",
+  "description": "Simple nodejs server",
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/mocha"
